Get download request working

--- a/src/ds3/Gui.form
+++ b/src/ds3/Gui.form
@@ -58,7 +58,7 @@
           <text value="Verwijderen"/>
         </properties>
       </component>
-      <component id="f9e59" class="javax.swing.JLabel" binding="labelSelectedItem">
+      <component id="f9e59" class="javax.swing.JLabel" binding="selectedItemLabel">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <minimum-size width="100" height="-1"/>
@@ -66,7 +66,6 @@
           </grid>
         </constraints>
         <properties>
-          <foreground color="-16777216"/>
           <text value="/"/>
         </properties>
       </component>
@@ -100,7 +99,7 @@
           <text value="File locatie:"/>
         </properties>
       </component>
-      <component id="acd5a" class="javax.swing.JLabel" binding="fileLocation">
+      <component id="acd5a" class="javax.swing.JLabel" binding="fileLocationLabel">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="5" height="33"/>
